# lightgbm-tutorial

./: .gitignore  README.md  pyproject.toml
notebook/: graph.ipynb
src/: main.py
src/lightgbm_tutorial/: __init__.py
